# markdown-toc-generator

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  ruff.yml
src/: arguments.py  file_toc.py  format_headers.py  full_toc.py  header.py  heading.py  main.py  output_toc.py  parse_headers.py  toc.py
src/markdown_toc_generator/: __main__.py  arguments.py  heading.py  output_toc.py  parse_headings.py  toc.py
