[project]
name = "markdown-toc-generator"
authors = [{name = "Electronic Mango", email = "78230210+Electronic-Mango@users.noreply.github.com"}]
version = "1.3.0"
description = "Python scripts generating Table of Contents from markdown headers."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
keywords = ["Markdown", "ToC", "toc", "table-of-contents", "Table of Contents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Electronic-Mango/markdown-toc-generator"
Documentation = "https://github.com/Electronic-Mango/markdown-toc-generator"
Repository = "https://github.com/Electronic-Mango/markdown-toc-generator"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project.scripts]
markdown-toc-generator = "markdown_toc_generator.toc:main"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # Remove if I even add docstrings to the project (probably won't).
    "COM812",  # Can cause conflicts with the formatter.
    "ERA",
    "FBT",
    "T20",  # TODO: Look for a better way of displaying output.
    "TC001",
    "TC002",
    "TC003",
]
